# Big-Data-Storage-Homework

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
